Finished chicken curry and edited biryani

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/chickencurry.html">Chicken Curry</a>
+    <a href="./recipes/biryani.html">Biryani</a>
+    <a href="./recipes/lassi.html">Lassi</a>
 </body>
 </html>
