Finished all recipes

--- a/recipes/chickencurry.html
+++ b/recipes/chickencurry.html
@@ -33,7 +33,7 @@
         <li>Coriander or dried fenugreek (kasuri methi) to garnish</li>
         <li>1/2 tsp garam masala</li>
     </ul>
-    
+
     <h3>Steps</h3>
     <ol>
         <li>Heat the oil in a deep pot</li>
@@ -44,6 +44,7 @@
         <li>Saute the chicken on high heat, again stirring constantly, until the chicken changes colour and no longer remains pink</li>
         <li>Add 2.5 cups of water. Bring to a boil, then cover and simmer on low for half an hour</li>
         <li>Once the chicken is cooked through, stir in the garam masala and coriander/dried fenugreek.</li>
+        <li>There you go! Now go and enjoy your authentic Chicken Curry with your friends and family!</li>
     </ol>
 
 <a href="../index.html">Back to Main Page</a>
